traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:9: error: not found: value x
      setPos(x,k+1)
             ^TraversalByColumn:12: error: not found: value x
    x=x+1
    ^